@@ -11,6 +11,8 @@ Changes in 2.0.2-alpha:
  o Avoid data corruption when reading data entirely into the second-to-last chain of an evbuffer. [Bug report from Victor Goya]
  o Make sendfile work on FreeBSD
  o Do not use vararg macros for accessing evrpc structures; this is not backwards compatible, but we did not promise any backwards compatibility for the rpc code.
+ o Actually define the event_config_set_flag() function.
+
 
 Changes in 2.0.1-alpha:
  o free minheap on event_base_free(); from Christopher Layne
